Fixed opacity of collapsableButton

--- a/src/components/Student.module.scss
+++ b/src/components/Student.module.scss
@@ -6,3 +6,12 @@
   margin: 10px auto;
   box-sizing: border-box;
 }
+
+
+.collapsableButton {
+  opacity: 0.5;
+}
+
+.collapsableButton:hover {
+  opacity: 1;
+}
